Bug 835496 - Don't try to fix the types for object initializers with dense elements, r=jandem.